--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pusher/push-notifications-web": "^1.1.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "react": "^18.2.0",
